Add depends for turret node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ project(${PROJECT_NAME})
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS roscpp message_generation std_msgs rio_control_node ck_utilities_node hmi_agent_node nav_msgs)
+find_package(catkin REQUIRED COMPONENTS roscpp message_generation std_msgs rio_control_node ck_utilities_node hmi_agent_node turret_node nav_msgs)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -112,7 +112,7 @@ catkin_package(
 #  LIBRARIES rio_control_node
 #  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
-  CATKIN_DEPENDS roscpp message_generation message_runtime rio_control_node ck_utilities_node hmi_agent_node nav_msgs
+  CATKIN_DEPENDS roscpp message_generation message_runtime rio_control_node ck_utilities_node hmi_agent_node nav_msgs turret_node
 )
 
 ###########
