--- a/package.xml
+++ b/package.xml
@@ -61,6 +61,6 @@
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
+    <build_ci_depend>turret_node</build_ci_depend>
   </export>
 </package>
